--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -557,6 +557,13 @@
   urldate  = {2025-06-10}
 }
 
+@misc{autogen,
+  title    = {AutoGen: framework do tworzenia agentów LLM od firmy Microsoft},
+  url      = {https://microsoft.github.io/autogen/stable//index.html},
+  language = {en},
+  urldate  = {2025-06-10}
+}
+
 @misc{langchain,
   title    = {LangChain: framework do tworzenia aplikacji LLM},
   url      = {https://python.langchain.com/},
@@ -615,6 +622,22 @@
   language     = {en},
   urldate      = {2025-06-10}
 }
+
+@misc{fastapi,
+  title        = {FastAPI: framework do tworzenia aplikacji webowych w Pythonie},
+  url          = {https://fastapi.tiangolo.com},
+  language     = {en},
+  urldate      = {2025-06-11}
+}
+
+@misc{coderabbit,
+  title        = {CodeRabbit improves code review accuracy with OpenAI o3, o4-mini, and GPT-4.1e},
+  url          = {https://openai.com/index/coderabbit/},
+  language     = {en},
+  urldate      = {2025-06-11}
+}
+
+https://openai.com/index/coderabbit/
 
 
 @article{masoudnia_mixture_2014,
