--- a/docs/tex/3-przeglad-narzedzi.tex
+++ b/docs/tex/3-przeglad-narzedzi.tex
@@ -2,11 +2,11 @@
 
 \section{Przegląd technologii i narzędzi}
 
-Celem tego rozdziału jest przedstawienie najważniejszych technologii i narzędzi, stanowiących podstawę niniejszego badania. Szczególny nacisk położony zostanie na duże modele językowe (LLM), opis ich architektur oraz ich zastosowanie w generowaniu konfiguracji wdrożeniowej. Ponadto, omówione zostaną istotne narzędzia DevOps, takie jak Docker i Kubernetes, niezbędne w zarządzaniu środowiskami uruchomieniowymi, oraz narzędzia służące do walidacji i oceny jakości generowanego kodu IaC. Rozdział zawiera także opis środowiska eksperymentalnego oraz wykorzystywanych technologii wspierających automatyzację i monitorowanie eksperymentów.
+Celem tego rozdziału jest przedstawienie najważniejszych technologii i narzędzi, stanowiących podstawę niniejszego badania. Szczególny nacisk położony zostanie na duże modele językowe, opis ich architektur oraz ich zastosowanie w generowaniu konfiguracji wdrożeniowej. Ponadto, omówione zostaną istotne narzędzia DevOps, takie jak Docker i Kubernetes, niezbędne w zarządzaniu środowiskami uruchomieniowymi, oraz narzędzia służące do walidacji i oceny jakości generowanego kodu IaC. Rozdział zawiera także opis środowiska eksperymentalnego oraz wykorzystywanych technologii wspierających automatyzację i monitorowanie eksperymentów.
 
 \subsection{Modele językowe wykorzystywane w badaniu}
 
-Duże modele językowe (LLM) pełnią istotną rolę w prezentowanych eksperymentach, służąc jako generatory konfiguracji IaC. Ich zdolność do przetwarzania języka naturalnego oraz generowania poprawnego kodu czyni je ważnym elementem automatyzacji procesów DevOps. W tym podrozdziale przedstawiono charakterystykę wybranych modeli, opis ich architektur oraz praktyczne aspekty związane z ich wykorzystaniem.
+Duże modele językowe pełnią istotną rolę w prezentowanych eksperymentach, służąc jako generatory konfiguracji IaC. Ich zdolność do przetwarzania języka naturalnego oraz generowania poprawnego kodu czyni je ważnym elementem automatyzacji procesów DevOps. W tym podrozdziale przedstawiono charakterystykę wybranych modeli, opis ich architektur oraz praktyczne aspekty związane z ich wykorzystaniem.
 
 Rynek dużych modeli językowych rozwija się dynamicznie, oferując zarówno modele komercyjne, dostępne przez API, jak i modele open-source, możliwe do uruchomienia lokalnie lub na własnej infrastrukturze. Decyzja o wyborze konkretnego rodzaju modelu często zależy od dostępności zasobów sprzętowych (zwłaszcza GPU), wymagań dotyczących licencji, kwestii związanych z prywatnością danych oraz możliwości dostosowania modeli do specyficznych zastosowań.
 
@@ -15,7 +15,7 @@ Modele komercyjne dostępne przez API zazwyczaj cechują się wysoką wydajnośc
 Wybrane do badania modele komercyjne to:
 
 \begin{itemize}
-    \item \textbf{OpenAI GPT‑4.1} \cite{gpt41} oraz \textbf{o3} \cite{o3}: Modele OpenAI z 2025 roku. GPT‑4.1 (wprowadzony 14 kwietnia 2025) to model zoptymalizowany pod kątem kodowania, obsługi długiego kontekstu (do 1 miliona tokenów), z szybszym działaniem i niższymi kosztami w porównaniu do GPT‑4o . Rodzina \textbf{o3}, w tym o3 mini, prezentuje głębokie możliwości logicznego rozumowania – stosowane razem w narzędziach takich jak CodeRabbit dla szybszego i bardziej niezawodnego sprawdzania kodu.
+    \item \textbf{OpenAI GPT‑4.1} \cite{gpt41} oraz \textbf{o3} \cite{o3}: Modele OpenAI z 2025 roku. GPT‑4.1 (wprowadzony 14 kwietnia 2025) to model zoptymalizowany pod kątem kodowania, obsługi długiego kontekstu (do 1 miliona tokenów), z szybszym działaniem i niższymi kosztami w porównaniu do GPT‑4o . Rodzina \textbf{o3}, w tym o3 mini, prezentuje głębokie możliwości logicznego rozumowania – stosowane razem w narzędziach takich jak CodeRabbit dla szybszego i bardziej niezawodnego sprawdzania kodu \cite{coderabbit}.
     
     \item \textbf{Anthropic Claude Opus 4} \cite{claude_opus4} oraz \textbf{Sonnet 4} \cite{claude_sonnet4}: Modele z rodziny Claude 4, opublikowane w maju 2025 roku. Opus 4 to najbardziej zaawansowana wersja, oferująca tryb \textit{extended thinking} i kontekst do 200 tys. tokenów. Sonnet 4 stanowi kompromis między mocą obliczeniową a szybkością i kosztami, również obsługuje rozszerzony kontekst i precyzyjne instrukcje.
 
@@ -27,18 +27,20 @@ Modele open-source stanowią atrakcyjną alternatywę, oferując pełną kontrol
 Wybrane do badania modele open-source to:
 
 \begin{itemize}
-    \item \textbf{Mistral Medium} \cite{mistral_medium_3} oraz \textbf{Codestral} \cite{codestral}: Modele opracowane przez firmę Mistral AI. Mistral Medium 3 (maj 2025) to ogólnego przeznaczenia model o wysokiej wydajności, zoptymalizowany do pracy zarówno w chmurze, jak i lokalnie (on-premise). Charakteryzuje się bardzo korzystnym stosunkiem jakości do kosztów, osiągając wyniki porównywalne z modelami komercyjnymi przy niższych wymaganiach infrastrukturalnych. Codestral (maj 2024) to 22-miliardowy model open-weight, wyspecjalizowany w generowaniu i uzupełnianiu kodu źródłowego w ponad 80 językach programowania, wspierający m.in. kontekst 32k tokenów.
+    \item \textbf{Mistral Medium} \cite{mistral_medium_3} oraz \textbf{Codestral} \cite{codestral}: Modele opracowane przez firmę Mistral AI. Mistral Medium 3 (maj 2025) to ogólnego przeznaczenia model o wysokiej wydajności, zoptymalizowany do pracy zarówno w chmurze, jak i lokalnie (on-premise). Charakteryzuje się bardzo korzystnym stosunkiem jakości do kosztów, osiągając wyniki porównywalne z modelami komercyjnymi przy niższych wymaganiach infrastrukturalnych. Codestral (maj 2024) to 22-miliardowy model open-weight, wyspecjalizowany w generowaniu i uzupełnianiu kodu źródłowego w ponad 80 językach programowania, wspierający m.in. kontekst 32 tys. tokenów.
 
-    \item \textbf{Meta Llama 4 Scout} oraz \textbf{Llama 4 Maverick} \cite{llama4}: Oficjalne modele typu Mixture-of-Experts (MoE) \cite{masoudnia_mixture_2014} udostępnione przez firmę Meta w kwietniu 2025 roku. Llama 4 Scout to model z aktywacją 17 miliardów parametrów i maksymalnym kontekstem 10 milionów tokenów. Llama 4 Maverick to większy wariant, w którym aktywowanych jest również 17 miliardów parametrów, ale model korzysta z architektury 128 ekspertów i posiada łącznie około 400 miliardów parametrów, przy oknie kontekstu rzędu 1 miliona tokenów. Oba modele zostały wydane na otwartej licencji, wspierają zarówno zadania językowe, jak i multimodalne.
+    \item \textbf{Meta Llama 4 Scout} oraz \textbf{Llama 4 Maverick} \cite{llama4}: Modele typu Mixture-of-Experts (MoE) \cite{masoudnia_mixture_2014} udostępnione przez firmę Meta w kwietniu 2025 roku. Llama 4 Scout to model z aktywacją 17 miliardów parametrów i maksymalnym kontekstem 10 milionów tokenów. Llama 4 Maverick to większy wariant, w którym aktywowanych jest również 17 miliardów parametrów, ale model korzysta z architektury 128 ekspertów i posiada łącznie około 400 miliardów parametrów, przy oknie kontekstu rzędu 1 miliona tokenów. Oba modele zostały wydane na otwartej licencji, wspierają zarówno zadania językowe, jak i multimodalne.
 
-    \item \textbf{DeepSeek V3} \cite{deepseek_v3}: Model zaprezentowany przez DeepSeek AI w grudniu 2024 roku. DeepSeek V3 to otwarty model typu MoE o łącznej liczbie 670 miliardów parametrów, z których 37 miliardów jest aktywowanych przy każdym zapytaniu. Model osiąga wysoką przepustowość (do 60 tokenów na sekundę) i został wytrenowany na 14,8 bilionach tokenów. W benchmarkach przewyższa m.in. GPT-4 Turbo i Claude 3.5 w zadaniach kodowych, matematycznych i językowych. Obsługuje kontekst 32k tokenów i został udostępniony na licencji OpenRAIL.
+    \item \textbf{DeepSeek V3} \cite{deepseek_v3}: Model zaprezentowany przez DeepSeek AI w grudniu 2024 roku. DeepSeek V3 to otwarty model typu MoE o łącznej liczbie 670 miliardów parametrów, z których 37 miliardów jest aktywowanych przy każdym zapytaniu. Model osiąga wysoką przepustowość (do 60 tokenów na sekundę) i został wytrenowany na 14,8 bilionach tokenów. W benchmarkach przewyższa m.in. GPT-4 Turbo i Claude 3.5 w zadaniach kodowych, matematycznych i językowych. Obsługuje kontekst 32 tys. tokenów i został udostępniony na licencji OpenRAIL.
 \end{itemize}
 
-Wszystkie wymienione modele reprezentują aktualny szczyt osiągnięć w dziedzinie dużych modeli językowych (LLM). Wybrane zostały przede wszystkim ze względu na ich potwierdzone zdolności do generowania wysokiej jakości kodu oraz wsparcie dla funkcji \textit{tool calling}. Funkcje te umożliwiają bezpośrednią integrację modeli z zewnętrznymi narzędziami lub usługami poprzez dedykowane mechanizmy API bądź platformy agentowe, takie jak LangChain czy LangGraph. W proponowanym w tej pracy podejściu, funkcje \textit{tool calling} będą odgrywać znaczącą rolę w zarządzaniu kontekstem i procesie generowania konfiguracji.
+Wszystkie wymienione modele reprezentują aktualny szczyt osiągnięć w dziedzinie dużych modeli językowych. Wybrane zostały przede wszystkim ze względu na ich potwierdzone zdolności do generowania wysokiej jakości kodu oraz wsparcie dla funkcji \textit{tool calling}. Funkcje te umożliwiają bezpośrednią integrację modeli z zewnętrznymi narzędziami lub usługami poprzez dedykowane mechanizmy API bądź platformy agentowe, takie jak LangChain \cite{langchain} czy LangGraph \cite{langgraph}. W proponowanym w tej pracy podejściu, funkcje \textit{tool calling} będą odgrywać znaczącą rolę w zarządzaniu kontekstem i procesie generowania konfiguracji.
 
 \subsection{Architektury i charakterystyka}
 
 Większość współczesnych dużych modeli językowych bazuje na architekturze transformera \cite{vaswani_attention_2023}, wykorzystując mechanizm uwagi (attention mechanism) do efektywnego przetwarzania sekwencji danych. Architektury te, pomimo wspólnych założeń, różnią się między sobą liczbą parametrów, rozmiarem okna kontekstowego oraz specyficznymi optymalizacjami, które wpływają na ich zdolność do generowania kodu i rozumienia złożonych instrukcji. Coraz większe znaczenie zyskują również alternatywne podejścia architektoniczne, takie jak Mixture-of-Experts (MoE), w których przy każdym zapytaniu aktywowane są tylko wybrane części modelu, co pozwala na zwiększenie efektywności obliczeniowej bez pogarszania jakości generowanych wyników.
+
+Poniżej przedstawiono najważniejsze cechy różnicujące współczesne modele językowe, mające istotny wpływ na ich zachowanie i przydatność w zadaniach związanych z generowaniem kodu:
 
 \begin{itemize}
     \item \textbf{Liczba parametrów:} Liczba parametrów (często liczona w miliardach) jest wskaźnikiem skali modelu i jego zdolności do uczenia się złożonych wzorców z danych. Modele z większą liczbą parametrów zazwyczaj wykazują lepszą wydajność w szerokim zakresie zadań, jednak ich uruchomienie i obsługa wymagają znacznie większych zasobów obliczeniowych. Należy jednak zaznaczyć, że sama liczba parametrów nie jest jedynym wyznacznikiem jakości; znaczenie ma również jakość danych treningowych, architektura (np. Mixture-of-Experts) oraz proces dostrajania modelu.
@@ -47,8 +49,6 @@ Większość współczesnych dużych modeli językowych bazuje na architekturze 
 \end{itemize}
 
 Poniższa tabela \ref{tab:llm-characteristic} przedstawia ogólne charakterystyki wybranych modeli LLM, które będą wykorzystywane w badaniu. Okno kontekstu podano w liczbie tokenów, a liczba parametrów — w miliardach, jeśli została opublikowana.
-
-\newpage
 
 \begin{table}[!h] \centering
 \caption{Charakterystyka wybranych modeli LLM}
@@ -71,7 +71,7 @@ DeepSeek & DeepSeek V3 & 671 & 128k \\ \hline
 
 \subsection{Sposoby wykorzystania modeli}
 
-W ramach niniejszego badania modele językowe są wykorzystywane w trybie inferencji (wnioskowania), bez dodatkowego etapu ich dostrajania (fine-tuningu) na specyficznym zbiorze danych IaC. Oznacza to, że modele wykorzystują swoją ogólną wiedzę, nabytą podczas szerokiego treningu, do generowania konfiguracji na podstawie dostarczonego kontekstu i promptów. Taki sposób podejścia jest zgodny z koncepcją "Don't Train, Just Prompt" \cite{kratzke_dont_2024}, co pozwala na szybką iterację i wykorzystanie najnowszych, potężnych modeli bez konieczności kosztownego i czasochłonnego procesu retrenowania.
+W ramach niniejszego badania modele językowe są wykorzystywane w trybie inferencji (wnioskowania), bez dodatkowego etapu ich dostrajania (fine-tuningu) na specyficznym zbiorze danych kodu infrastruktury. Oznacza to, że modele wykorzystują swoją ogólną wiedzę, nabytą podczas szerokiego treningu, do generowania konfiguracji na podstawie dostarczonego kontekstu i promptów. Taki sposób podejścia jest zgodny z koncepcją "Don't Train, Just Prompt" \cite{kratzke_dont_2024}, co pozwala na szybką iterację i wykorzystanie najnowszych, potężnych modeli bez konieczności kosztownego i czasochłonnego procesu ponownego trenowania.
 
 Integracja z wybranymi modelami LLM odbywa się głównie za pośrednictwem ich bezpośrednich interfejsów programistycznych (API). Takie podejście gwarantuje dostęp do najnowszych wersji modeli, pełną kontrolę nad parametrami zapytania oraz optymalne czasy odpowiedzi. Należy jednak pamiętać o potencjalnych ograniczeniach wynikających z limitów API oraz braku możliwości bezpośredniej modyfikacji wewnętrznej architektury lub kodu źródłowego w przypadku zamkniętych modeli komercyjnych.
 
@@ -84,17 +84,17 @@ Efektywność wykorzystania dużych modeli językowych w dużej mierze zależy o
 \begin{itemize}
 	\item \textbf{Zero-shot prompting:} Jest to najprostsza forma promptowania, gdzie model otrzymuje zadanie lub pytanie bez żadnych wcześniejszych przykładów. Oczekuje się, że model, bazując na swojej wiedzy ogólnej, wygeneruje odpowiedź. W kontekście generowania IaC, model otrzymałby instrukcję typu "Wygeneruj Dockerfile dla aplikacji Node.js", bez dodatkowych danych kontekstowych poza samym opisem zadania. Jest to podejście szybkie, ale jego skuteczność jest często ograniczona, zwłaszcza w przypadku złożonych lub bardzo specyficznych wymagań.
 	\item \textbf{Few-shot prompting:} Ta strategia polega na dostarczeniu modelowi kilku przykładów par (zapytanie, oczekiwana odpowiedź) przed właściwym zadaniem \cite{brown_language_2020} Przykłady te służą jako demonstracja pożądanego formatu i stylu odpowiedzi, pomagając modelowi zrozumieć intencję użytkownika i dostosować swoje generacje. W przypadku IaC, można by podać kilka par "opis aplikacji \textrightarrow{} przykładowy Dockerfile/manifest Kubernetes", aby model nauczył się wzorca i preferowanych praktyk. Zastosowanie tej metody często zwiększa jakość generacji w porównaniu do zero-shot.
-	\item \textbf{Chain-of-Thought (CoT) prompting:} Jest to technika, w której prompt instruuje model, aby przed podaniem ostatecznej odpowiedzi, wygenerował sekwencję pośrednich kroków rozumowania. Model "myśli na głos", co często prowadzi do bardziej precyzyjnych i trafnych wyników, szczególnie w zadaniach wymagających złożonych rozumowań lub wieloetapowych rozwiązań. W początkowej fazie rozwoju LLM technika CoT często wymagała dedykowanych instrukcji w prompcie, aby model wygenerował te kroki. Obecnie wiele zaawansowanych modeli językowych, dzięki swoim architekturze i procesom treningowym, potrafi wykazywać tego typu "rozumowanie" w sposób bardziej intuicyjny, często nawet bez wyraźnego polecenia, jeśli kontekst zadania na to wskazuje. W kontekście IaC, model mógłby najpierw "zastanowić się" nad zależnościami aplikacji, potem nad wymaganiami środowiskowymi i optymalizacjami, a dopiero potem wygenerować kod konfiguracji. CoT poprawia transparentność i debugowalność procesu generowania, a także może zwiększyć poprawność odpowiedzi.
+	\item \textbf{Chain-of-Thought (CoT) prompting:} Jest to technika, w której prompt instruuje model, aby przed podaniem ostatecznej odpowiedzi, wygenerował sekwencję pośrednich kroków rozumowania. Model "myśli na głos", co często prowadzi do bardziej precyzyjnych i trafnych wyników, szczególnie w zadaniach wymagających złożonych rozumowań lub wieloetapowych rozwiązań. W początkowej fazie rozwoju LLM technika CoT często wymagała dedykowanych instrukcji w prompcie, aby model wygenerował te kroki. Obecnie wiele zaawansowanych modeli językowych, dzięki swojej architekturze i procesom treningowym, potrafi wykazywać tego typu "rozumowanie" w sposób bardziej intuicyjny, często nawet bez wyraźnego polecenia, jeśli kontekst zadania na to wskazuje. W kontekście IaC, model mógłby najpierw "zastanowić się" nad zależnościami aplikacji, potem nad wymaganiami środowiskowymi i optymalizacjami, a dopiero potem wygenerować kod konfiguracji. CoT poprawia transparentność i debugowalność procesu generowania, a także może zwiększyć poprawność odpowiedzi.
 	\item \textbf{Agent-based prompting:} Ten tryb wykracza poza jednorazowe generowanie odpowiedzi. Model, działając jako "agent", otrzymuje zadanie i może iteracyjnie wykonywać szereg akcji: planować, używać zewnętrznych narzędzi (tzw. "tool calling"), analizować ich wyniki i modyfikować swój plan działania w celu osiągnięcia celu. Podejście agentowe można postrzegać jako ewolucję i rozszerzenie idei Chain-of-Thought, gdzie "myślenie" modelu jest przekształcane w sekwencję interakcji ze światem zewnętrznym i refleksji. Agent nie tylko generuje wewnętrzne kroki rozumowania, ale także aktywnie wykorzystuje narzędzia do zbierania danych, weryfikacji hipotez i korygowania swojego działania na podstawie rzeczywistych wyników. Jest to podejście szczególnie efektywne w przypadku złożonych problemów wymagających interakcji ze środowiskiem zewnętrznym oraz adaptacji.
 \end{itemize}
 
 W kontekście generowania konfiguracji wdrożeniowej, zastosowanie podejścia agentowego jest uzasadnione ze względu na możliwość kompleksowego zarządzania kontekstem i procesem generacji. Generowanie IaC często wymaga dostępu do wielu źródeł informacji i precyzyjnego umieszczenia danych w konfiguracji. W przeciwieństwie do jednorazowych generacji (jak w zero-shot czy few-shot), agent może, na podstawie dostarczonego mu opisu docelowej infrastruktury, wygenerować wstępną wersję konfiguracji (np. Dockerfile). Następnie, istotnym elementem jest możliwość wykorzystania zewnętrznych narzędzi do interakcji z kontekstem. Agent może na przykład czytać wybrane pliki z repozytorium kodu, aby lepiej zrozumieć strukturę projektu i zależności. Może również sterować swoim wewnętrznym przepływem rozumowania i zakresem czytanego kontekstu.
 
-W niniejszej pracy magisterskiej zastosowana zostanie właśnie metoda agentowa. Podejście agentowe może być realizowane na różne sposoby, zarówno poprzez bezpośrednie wykorzystanie dedykowanych interfejsów API udostępnianych przez niektóre modele (np. poprzez \textit{tool calling} czy \textit{function calling}), jak i poprzez zastosowanie specjalizowanych frameworków orkiestracyjnych, takich jak \textbf{AutoGen} czy \textbf{LangChain/LangGraph}. W tym badaniu, do implementacji agentów i zarządzania złożonymi przepływami pracy z wykorzystaniem funkcji \textit{tool calling} wybrana została biblioteka LangGraph w języku Python, uzupełniona o funkcjonalności LangChain. Rola agenta koncentruje się na efektywnym dostarczaniu kontekstu i zarządzaniu procesem generacji konfiguracji IaC.
+W niniejszej pracy magisterskiej zastosowana zostanie właśnie metoda agentowa. Podejście agentowe może być realizowane na różne sposoby, zarówno poprzez bezpośrednie wykorzystanie dedykowanych interfejsów API udostępnianych przez niektóre modele (np. poprzez \textit{tool calling} czy \textit{function calling}), jak i poprzez zastosowanie specjalizowanych frameworków orkiestracyjnych, takich jak \textbf{AutoGen} \cite{autogen} czy \textbf{LangChain/LangGraph}. W tym badaniu, do implementacji agentów i zarządzania złożonymi przepływami pracy z wykorzystaniem funkcji \textit{tool calling} wybrana została biblioteka LangGraph w języku Python, uzupełniona o funkcjonalności LangChain. Rola agenta koncentruje się na efektywnym dostarczaniu kontekstu i zarządzaniu procesem generacji konfiguracji IaC.
 
 \subsection{Narzędzia DevOps: Docker i Kubernetes}
 
-Zarządzanie środowiskami uruchomieniowymi i wdrażanie aplikacji w chmurze opiera się współcześnie na narzędziach takich jak Docker i Kubernetes. Niniejszy podrozdział opisuje te technologie, ich rolę w cyklu DevOps oraz potencjalne pułapki konfiguracyjne, które mogą być generowane przez duże modele językowe (LLM). Zrozumienie ich funkcjonalności i typowych błędów jest istotne dla oceny jakości generowanych przez LLM konfiguracji IaC.
+Zarządzanie środowiskami uruchomieniowymi i wdrażanie aplikacji w chmurze opiera się współcześnie na narzędziach takich jak Docker i Kubernetes. Niniejszy podrozdział opisuje te technologie, ich rolę w cyklu DevOps oraz potencjalne pułapki konfiguracyjne, które mogą być generowane przez duże modele językowe. Zrozumienie ich funkcjonalności i typowych błędów jest istotne dla oceny jakości generowanych przez LLM konfiguracji IaC.
 
 \textbf{Docker} to platforma do tworzenia, wdrażania i uruchamiania aplikacji w kontenerach. Konteneryzacja pozwala na pakowanie aplikacji wraz z jej zależnościami i bibliotekami w izolowane środowiska, co zapewnia spójność działania niezależnie od środowiska docelowego. Docker jest wykorzystywany w wielu obszarach: od uruchamiania lokalnych usług deweloperskich i testowych, przez konteneryzację narzędzi, aż po konteneryzację produkcyjnych aplikacji w złożonych architekturach mikroserwisowych.
 
@@ -127,7 +127,7 @@ Analiza zdolności LLM do unikania wymienionych błędów oraz do generowania ef
 
 \subsection{Narzędzia do oceny jakości IaC}
 
-W kontekście automatycznego generowania konfiguracji Infrastructure as Code (IaC) przez modele językowe (LLM), ważne jest zapewnienie, że wygenerowane konfiguracje są nie tylko poprawne składniowo, ale również bezpieczne, zgodne z najlepszymi praktykami i efektywne. Do tego celu służą wyspecjalizowane narzędzia do analizy i walidacji kodu IaC. Wyniki uzyskane z tych narzędzi będą stanowić podstawę do obiektywnej oceny jakości konfiguracji generowanych przez LLM w dalszej części niniejszej pracy. W niniejszym podrozdziale opisane zostaną dwa wybrane narzędzia, które zostaną użyte w badaniu: Hadolint \cite{hadolint} (dla Dockerfile) i Kube-linter \cite{kubelinter} (dla manifestów Kubernetes).
+W kontekście automatycznego generowania konfiguracji Infrastructure as Code (IaC) przez modele językowe, ważne jest zapewnienie, że wygenerowane konfiguracje są nie tylko poprawne składniowo, ale również bezpieczne, zgodne z najlepszymi praktykami i efektywne. Do tego celu służą wyspecjalizowane narzędzia do analizy i walidacji kodu IaC. Wyniki uzyskane z tych narzędzi będą stanowić podstawę do obiektywnej oceny jakości konfiguracji generowanych przez LLM w dalszej części niniejszej pracy. W niniejszym podrozdziale opisane zostaną dwa wybrane narzędzia, które zostaną użyte w badaniu: Hadolint \cite{hadolint} (dla Dockerfile) i Kube-linter \cite{kubelinter} (dla manifestów Kubernetes).
 
 Oba narzędzia działają na zasadzie statycznej analizy kodu, co oznacza, że analizują pliki konfiguracyjne bez konieczności ich uruchamiania lub wdrażania.
 
@@ -159,7 +159,7 @@ Interpretacja wyników z obu narzędzi wymaga zrozumienia specyfiki Dockerfile i
 
 \subsection{Środowisko eksperymentalne i technologie wspierające}
 
-Eksperymenty zostały przeprowadzone na lokalnej stacji roboczej, którą stanowi komputer MacBook Air 13" z procesorem Apple M4 i 16 GB pamięci RAM. Ważne jest, że w środowisku tym nie wykorzystywano lokalnie żadnych kart graficznych (GPU) do inferencji modeli językowych. Wszystkie interakcje z modelami LLM odbywały się wyłącznie za pośrednictwem zewnętrznych interfejsów API.
+Eksperymenty zostały przeprowadzone na lokalnej stacji roboczej, którą stanowi komputer MacBook Air z procesorem Apple M4 i 16 GB pamięci RAM. Ważne jest, że w środowisku tym nie wykorzystywano lokalnie żadnych kart graficznych (GPU) do inferencji modeli językowych. Wszystkie interakcje z modelami LLM odbywały się wyłącznie za pośrednictwem zewnętrznych interfejsów API.
 
 Do zarządzania kontenerami i środowiskami uruchomieniowymi wykorzystano następujące narzędzia:
 \begin{itemize}
@@ -167,7 +167,7 @@ Do zarządzania kontenerami i środowiskami uruchomieniowymi wykorzystano nastę
 	\item \textbf{Kind (Kubernetes in Docker):} \cite{kind} Lekki klaster Kubernetes uruchamiany w kontenerach Docker. Kind posłużył jako środowisko do walidacji wygenerowanych manifestów Kubernetes. Pozwoliło to na weryfikację, czy aplikacje faktycznie uruchamiają się i działają poprawnie w środowisku Kubernetes.
 \end{itemize}
 
-Cała logika sterowania eksperymentami, w tym implementacja agentów, wywoływanie narzędzi, walidacja i zbieranie wyników, została zrealizowana przy użyciu języka \textbf{Python w wersji 3.12}. Wykorzystane biblioteki Python obejmowały:
+Cała logika sterowania eksperymentami, w tym implementacja agentów, wywoływanie narzędzi, walidacja i zbieranie wyników, została zrealizowana przy użyciu języka \textbf{Python w wersji 3.13}. Wykorzystane biblioteki Python obejmowały:
 \begin{itemize}
 	\item \textbf{LangChain i LangGraph:} \cite{langchain} \cite{langgraph} Te frameworki stanowiły podstawę do budowy architektury agentowej, zarządzania przepływami konwersacji z LLM oraz integrowania wywołań narzędzi (tool calling).
 	\item \textbf{Docker SDK for Python (docker):} \cite{docker_sdk_python} Umożliwiała programistyczną interakcję z Docker Daemon, w tym budowanie obrazów i zarządzanie kontenerami.
@@ -184,7 +184,7 @@ Interakcje z modelami LLM odbywały się za pośrednictwem dwóch głównych śc
 
 W trakcie prowadzenia badań i eksperymentów wykorzystano również szereg narzędzi wspomagających, które były cenne dla efektywnego zarządzania procesem badawczym i analizą wyników:
 \begin{itemize}
-	\item \textbf{LangSmith:} \cite{langsmith} Niezwykle cenne narzędzie do monitorowania, debugowania i ewaluacji łańcuchów agentów zbudowanych w LangChain/LangGraph. LangSmith pozwalał na wizualizację poszczególnych kroków rozumowania agenta, jego interakcji z narzędziami oraz wywołań API do LLM. Było to kluczowe do analizy, dlaczego agent podjął taką, a nie inną decyzję, i gdzie popełnił błąd, co znacząco przyspieszyło proces optymalizacji promptów i logiki agenta.
+	\item \textbf{LangSmith:} \cite{langsmith} Nrzędzie do monitorowania, debugowania i ewaluacji łańcuchów agentów zbudowanych w LangChain/LangGraph. LangSmith pozwalał na wizualizację poszczególnych kroków rozumowania agenta, jego interakcji z narzędziami oraz wywołań API do LLM. Było to kluczowe do analizy, dlaczego agent podjął taką, a nie inną decyzję, i gdzie popełnił błąd, co znacząco przyspieszyło proces optymalizacji promptów i logiki agenta.
 	\item \textbf{Lens IDE:} \cite{lens_ide} Graficzne narzędzie (IDE) do zarządzania klastrami Kubernetes, ułatwiające monitorowanie stanu podów, serwisów i innych zasobów w trakcie walidacji.
 \end{itemize}
 Wspomniane narzędzia pomocnicze były integralną częścią środowiska badawczego, umożliwiając nie tylko uruchamianie eksperymentów, ale przede wszystkim ich efektywne monitorowanie, analizę i optymalizację.
