--- a/docs/main.tex
+++ b/docs/main.tex
@@ -14,6 +14,7 @@
 \addbibresource{bibliografia.bib} % Plik .bib z bibliografią
 
 \usepackage{minted}
+\usepackage{tabularx}
 
 %-------------------------------------------------------------
 % Wybór wydziału:
